Changelog
=========

1.3 (unreleased)
----------------

- While switching users: if 'email' is not in the properties (say:
  ldap), we can get far too many results; so we do a double check.
  [maurits]



1.2 (2011-05-09)
----------------

- Ignore mails with the email_from_address as From address, as this
  too easily means that a message sent by Poi ends up being added as a
  reply on an issue that we have just created.
  [maurits]


1.1 (2011-05-05)
----------------

- Handle encoded subject lines better.
  [maurits]


1.0 (2011-05-05)
----------------

- Initial release